# pr_nsight_aftermath

./: CMakeLists.txt  Install.cmake  README.md  template_pragma_module.json
.github/: pragma_module_info.json
build_scripts/: setup.py
cmake/modules/: Findnsight_aftermath.cmake
examples/: ex_load_pragma_module.lua
include/: pr_module.hpp
src/: aftermath_assert.hpp  crash_handler.cpp  crash_handler.hpp  nsight_aftermath.hpp  pr_module.cpp  shader_database.cpp  shader_database.hpp
src/implementation/: crash_handler.cpp  module.cpp  shader_database.cpp
src/interface/: crash_handler.cppm  module.cppm  nsight_aftermath.cppm  shader_database.cppm
